[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/battle/battle_ui.gd" id="1"]

[node name="BattleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Status" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "Turn 1"

[node name="PlayerStats" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "Player stats"

[node name="EnemyStats" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "Enemy stats"

[node name="InfusionRow" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="InfusionText" type="Label" parent="Margin/VBox/InfusionRow"]
layout_mode = 2
text = "Ki Infusion"

[node name="InfusionSlider" type="HSlider" parent="Margin/VBox/InfusionRow"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 60.0

[node name="InfusionValue" type="Label" parent="Margin/VBox/InfusionRow"]
layout_mode = 2
text = "0%"

[node name="Actions" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="strike" type="Button" parent="Margin/VBox/Actions"]
layout_mode = 2
text = "Strike"

[node name="ki_blast" type="Button" parent="Margin/VBox/Actions"]
layout_mode = 2
text = "Ki Blast"

[node name="ki_volley" type="Button" parent="Margin/VBox/Actions"]
layout_mode = 2
text = "Volley"

[node name="ki_barrage" type="Button" parent="Margin/VBox/Actions"]
layout_mode = 2
text = "Barrage"

[node name="power_up" type="Button" parent="Margin/VBox/Actions"]
layout_mode = 2
text = "Power Up"

[node name="guard" type="Button" parent="Margin/VBox/Actions"]
layout_mode = 2
text = "Guard"

[node name="transform_form" type="Button" parent="Margin/VBox/Actions"]
layout_mode = 2
text = "Transform Up"

[node name="kaioken" type="Button" parent="Margin/VBox/Actions"]
layout_mode = 2
text = "Kaioken"

[node name="ExitBox" type="PanelContainer" parent="Margin/VBox"]
visible = false
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Margin/VBox/ExitBox"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ExitBattleButton" type="Button" parent="Margin/VBox/ExitBox/Margin"]
layout_mode = 2
text = "Enemy defeated. Exit battle"

[node name="Log" type="RichTextLabel" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
fit_content = false
scroll_active = true
bbcode_enabled = false
text = "Combat log..."

[node name="DebugPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -340.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = 280.0
grow_horizontal = 0

[node name="Margin" type="MarginContainer" parent="DebugPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Stats" type="RichTextLabel" parent="DebugPanel/Margin"]
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false
text = ""
